--- a/form.html
+++ b/form.html
@@ -1,35 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome Page</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin-top: 50px;
-        }
-        .button {
-            background-color: blue;
-            color: white;
-            padding: 10px 20px;
-            font-size: 16px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        .button:hover {
-            background-color: darkblue;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>DevOps Overview</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: Arial, sans-serif;
+    }
+
+    body {
+      background-color: #f4f4f4;
+      color: #333;
+      line-height: 1.6;
+    }
+
+    header {
+      background-color: #2c3e50;
+      color: white;
+      padding: 2rem;
+      text-align: center;
+    }
+
+    header h1 {
+      font-size: 3rem;
+      margin-bottom: 0.5rem;
+    }
+
+    .about, .tools {
+      padding: 2rem;
+      max-width: 900px;
+      margin: auto;
+    }
+
+    .about h2, .tools h2 {
+      color: #2c3e50;
+      margin-bottom: 1rem;
+    }
+
+    .tool-cards {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 1.5rem;
+      margin-top: 1.5rem;
+    }
+
+    .card {
+      background: white;
+      padding: 1.5rem;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      transition: transform 0.2s ease;
+    }
+
+    .card:hover {
+      transform: translateY(-5px);
+    }
+
+    .card h3 {
+      color: #27ae60;
+      margin-bottom: 0.5rem;
+    }
+
+    footer {
+      text-align: center;
+      padding: 1rem;
+      background-color: #2c3e50;
+      color: white;
+      margin-top: 2rem;
+    }
+  </style>
 </head>
 <body>
+  <header>
+    <h1>DevOps</h1>
+    <p>Development + Operations = DevOps</p>
+  </header>
 
-    <h1>DevOps Project Training on Kubernetes</h1>
+  <section class="about">
+    <h2>What is DevOps?</h2>
+    <p>
+      DevOps is a set of practices that combines software development (Dev) and IT operations (Ops). 
+      It aims to shorten the systems development life cycle and provide continuous delivery.
+    </p>
+  </section>
 
-    <button class="button" onclick="alert('Hello!')">Hello</button>
+  <section class="tools">
+    <h2>Popular DevOps Tools</h2>
+    <div class="tool-cards">
+      <div class="card">
+        <h3>Docker</h3>
+        <p>Containerization tool to package and run applications.</p>
+      </div>
+      <div class="card">
+        <h3>Jenkins</h3>
+        <p>Automation server used for building and deploying code.</p>
+      </div>
+      <div class="card">
+        <h3>Kubernetes</h3>
+        <p>Orchestration platform for managing containers.</p>
+      </div>
+      <div class="card">
+        <h3>Git</h3>
+        <p>Version control system to track changes in source code.</p>
+      </div>
+    </div>
+  </section>
 
+  <footer>
+    <p>&copy; 2025 DevOps Hub. All rights reserved.</p>
+  </footer>
 </body>
 </html>
-
